<resources>
    <string name="app_name">總務小幫手</string>
    <string name="to_know">『照著啟示使我知道這奧秘』</string>
    <string name="to_know_h1">（以弗所書三章三節）</string>
    <string name="title_the_reason_people_live">一、人生存之目的</string>
    <string name="msg_the_reason_people_live">您曾否問過，您為何生存在世上，人生的目的究竟是什麼？\n\n不論您是那一類的人，屬於那一種行業，有幾件事是眾人所公認的，就是：\n\n金錢沒有辦法叫人滿足，\n學問也沒有辦法叫人滿足，\n享樂也沒有辦法叫人滿足，\n成就也沒有辦法叫人滿足。</string>
    <string name="msg_the_reason_people_live_q1">為什麼呢？ 因為您還未認識：</string>
    <string name="title_gods_plan">二、神的計劃</string>
    <string name="msg_gods_plan">神有一個計劃，這個計劃與人發生極大的關係，這個計劃聖經稱作神的經綸。\n神的經綸就是神對人全盤的計劃。它解釋人的來源、終局與生存意義。</string>
    <string name="msg_gods_plan_q2">如何能認識神的經綸？</string>
    <string name="msg_gods_plan_h2">（『經綸』一辭原文『oikonomia』，指神的計劃。）</string>
    <string name="title_four_keys">三、四把鑰匙</string>
    <string name="msg_four_keys">神為您預備了四把鑰匙，去開啟神的經綸。\n這四把鑰匙都記載在聖經裡面。這四把鑰匙同樣重要，缺一不可。\n\n現在請打開您的心，安靜詳細的讀完這本小冊子，就能掌握這四把鑰匙，明白神的經綸，認識人生存的意義，踏進滿足的人生。\n\n</string>
    <string name="key1_title">第一把鑰匙</string>
    <string name="key1_title_t1">神的創造</string>
    <string name="key1_title_t2">解開人類生存之奧秘</string>
    <string name="key2_title">第二把鑰匙</string>
    <string name="key2_title_t1">人的墮落</string>
    <string name="key2_title_t2">解開人性善惡之奧秘</string>
    <string name="key3_title">第三把鑰匙</string>
    <string name="key3_title_t1">基督的救贖</string>
    <string name="key3_title_t2">解開神人生死之奧秘</string>
    <string name="key4_title">第四把鑰匙</string>
    <string name="key4_title_t1">神的分賜</string>
    <string name="key4_title_t2">解開信主耶穌之奧秘</string>
    <string name="key1_title_human_with_gods_shape">一、人有神的形像</string>
    <string name="key1_verse_human_with_gods_shape">『神說，我們要按著我們的形像，照著我們的樣式造人。』</string>
    <string name="key1_verse_human_with_gods_shape_h1">(創世紀一章二十六節上)</string>
    <string name="key1_msg_human_with_gods_shape">神創造人與創造萬物不同，他是照著自己的形像造人，手套是按手的形像造的，目的是盛裝手。照樣人按神的形像被造，目的爲盛裝神。</string>
    <string name="key1_title_human_is_vase">二、人是器皿</string>
    <string name="key1_verse_human_is_vase">神『要在那蒙憐憫...的器皿上，彰顯祂榮耀的豐富；這器皿就是我們。』</string>
    <string name="key1_verse_human_is_vase_h1">(羅馬書九章二十三至二十四節)</string>
    <string name="key1_msg_human_is_vase">我們乃是神的器皿，神要作我們的內容。水瓶如何是爲盛裝水，照樣我們是爲盛裝神。\n\n難怪：知識、財富、享樂，成就皆不能叫您得到滿足，因爲您的被造是爲盛裝神！</string>
    <string name="key1_title_humans_three_parts">三、人的剖析</string>
    <string name="key1_verse_humans_three_parts">『願你們的靈、與魂、與身子得蒙保守。』</string>
    <string name="key1_verse_humans_three_parts_h1">(帖撒羅尼迦前書五章二十三節)</string>
    <string name="key1_msg_humans_three_parts_1">人是神的器皿，這個器皿聖經剖析爲三部分，就是靈、魂與體。請看下圖：</string>
    <string name="key1_msg_humans_three_parts_2">體:就是身體，屬生理層次，接觸物質界事物，是最淺顯的。\n\n魂:就是精神，屬心理層次，接觸精神界事物，是較深奧的。\n\n靈:是最深處的部分，屬屬靈層次，接觸神的事物。\n\n身體有毛病可找內外科醫生，\n精神有毛病可找精神科醫生，\n靈裏的問題卻只有神能解決。</string>
    <string name="key1_title_gods_economic">四、神的經綸</string>
    <string name="key1_msg_gods_economic">神要進到人的靈裏，\n作人的內容，\n成爲人的滿足。\n這就是人生存的意義！\n\n您被造\n不是爲盛裝飲食在肚腹裏，\n也不是爲盛裝學問在頭腦裏，\n乃是爲盛裝神在你的靈裏。</string>
    <string name="key4_title_twice_become">一、基督的兩次『成了』</string>
    <string name="key4_verse_twice_become1">『話成了肉身，支搭帳幕在我們中間。』</string>
    <string name="key4_verse_twice_become1_h1">(約翰福音一章十四節)</string>
    <string name="key4_msg_twice_become1">神『成了』肉身，降生爲人，稱爲耶穌。</string>
    <string name="key4_verse_twice_become2">『末後的亞當，成了賜生命的靈。』</string>
    <string name="key4_verse_twice_become2_h1">(哥林多前書十五章四十五節)</string>
    <string name="key4_msg_twice_become2">主『成了』那靈，從死復活，稱爲賜生命的靈。</string>
    <string name="key4_msg_twice_become3">這個靈既是『賜生命的靈』，就帶著生命，把神分賜到相信他的人裏面。</string>
    <string name="key4_verse_twice_become3">『人有了神的兒子，就有生命；沒有神的兒子，就沒有生命。』</string>
    <string name="key4_verse_twice_become3_h1">(約翰一書五章十二節)</string>
    <string name="key4_msg_twice_become4">故此，聖經說：</string>
    <string name="key4_title_rebron">二、使人重生</string>
    <string name="key4_verse_rebron1">『神…藉耶穌基督從死人中復活，重生了我們。』</string>
    <string name="key4_verse_rebron1_h1">(彼得前書一章三節)</string>
    <string name="key4_msg_rebron1">人第一次出生，得著肉身的生命。\n人從基督得著神的生命，就是第二次出生，聖經稱此爲『重生』：</string>
    <string name="key4_verse_rebron2">耶穌說：『人若不重生，就不能見神的國。』</string>
    <string name="key4_verse_rebron2_h1">(約翰福音一章三節)</string>
    <string name="key4_msg_rebron2">一隻豬若要屬於羊的國度，活出羊的生活，不能靠教育、改良、規律，他必須有羊的生活。\n\n照樣人要屬於神的國度，活出神聖生活，也不能靠教育、改良、規律，他必須接受神的生命！</string>
    <string name="key4_title_meaning_of_christian">三、作基督徒的意義</string>
    <string name="key4_verse_meaning_of_christian1">『他所豫定的人，又召他們來；所召來的人，又稱他們爲義；所稱爲義的人，又叫他們得榮耀。』</string>
    <string name="key4_verse_meaning_of_christian1_h1">(羅馬書八章三十節)</string>
    <string name="key4_verse_meaning_of_christian2">『因為神所豫知的人，他也豫定他們模成神兒子的形像。』</string>
    <string name="key4_verse_meaning_of_christian2_h1">(羅馬書八章二十九節)</string>
    <string name="key4_msg_meaning_of_christian1">基督徒乃是一個接受神分賜的人。神先把自己分賜到我們的靈裏，再從我們的靈擴充到我們的魂裏，最後叫我們靈、魂、體都充滿神，被神浸透，聖經稱這個結果爲『得榮耀』：</string>
    <string name="key4_msg_meaning_of_christian2">這樣，我們就能被變化而模成基督的模樣。</string>
    <string name="key4_msg_meaning_of_christian3">這就是人生的目的！\n\n這就是作基督徒的意義！\n\n這就是神爲您所定的計劃！</string>
    <string name="key4_msg_what_must_you_do_now1">現在你該作什麽?</string>
    <string name="key4_msg_what_must_you_do_now2">現在你明白神的計劃了，你該作四件事：</string>
    <string name="key4_title_turn_heart">一、心歸向神――悔改</string>
    <string name="key4_verse_turn_heart">『你們要悔改，因為諸天的國已經臨近了。』</string>
    <string name="key4_verse_turn_heart_h1">(馬太福音四章十七節)</string>
    <string name="key4_msg_turn_heart">悔改不是痛改前非，\n悔改不是改過自新，\n悔改乃是『心思轉變』。\n\n以前您是背著神作人，背著神作好人，背著神作壞人，您的心思是背著神的。\n現在請聽主耶穌的話：</string>
    <string name="key4_title_believe">二、相信――接受</string>
    <string name="key4_verse_believe">『凡接受他的，就是信入他名的人，他就賜他們權柄，成為神的兒女。』</string>
    <string name="key4_verse_believe_h1">(約翰福音一章十二節)</string>
    <string name="key4_msg_believe">相信不是點頭，不是同意，不是欣賞。\n\n人若送您一隻手錶，你點頭、同意、欣賞都不夠。你需要接受。相信就是接受。</string>
    <string name="key4_title_confess">三、承認――求告</string>
    <string name="key4_verse_confess">『你若口裏承認耶穌為主，心裏相信神叫他從死人中復活，就必得救。』</string>
    <string name="key4_verse_confess_h1">(羅馬書十章九節)</string>
    <string name="key4_msg_confess">作基督徒是公開作的，神要求『心』相信，『口』承認。\n\n若心裏不信，不能得救。\n\n若口裏不承認，也不能得救。但是：</string>
    <string name="key4_title_baptized">四、受浸――見證</string>
    <string name="key4_verse_baptized1">『信而受浸的必然得救，不信的必被定罪。』</string>
    <string name="key4_verse_baptized1_h1">(馬可福音十六章十六節)</string>
    <string name="key4_verse_baptized2">『我實實在在地告訴你，人若不是從水和靈生的，就不能進入神的國。』</string>
    <string name="key4_verse_baptized2_h1">(約翰福音三章五節)</string>
    <string name="key4_msg_baptized1">受浸是在人面前作見證。所有相信的人都應該受浸，好叫他們不但在神面前得救，也能在人面前得救。\n\n主耶穌說：</string>
    <string name="key4_msg_baptized2">藉著受浸，神把我們從撒但的國度，遷到神的國度裏。所以主耶穌又說：</string>
    <string name="key4_title_pray">現在請您禱告:</string>
    <string name="key4_msg_pray1">『主耶穌啊！我是一個罪人，我需要你。求你進到我的靈裏，除去我的罪，充滿我，叫我得有神的生命。我現在接受你作我的救主和生命。我把自己奉獻給你。奉主的名求，阿們！』</string>
    <string name="key4_msg_pray2">現在您明白人生的奧秘了！願主祝福你一直活在神的計劃中！\n\n若是您想對神的經綸有更多的研究，對基督的救恩有更深入的經歷，請您再來面談。</string>
    <string name="key2_title_human_two_att">一、人之二性</string>
    <string name="key2_msg_human_two_att">人是照著神的形像造的，故此凡人皆有合乎神性情之『善性』，如真、善、美、智、仁，勇等美德。\n\n然而，在人裏面還有『惡性』，與善性相爭，此即中國理學所謂『理欲之爭』。古今中外，所有認識人性者均承認此事實，這個『惡性』，聖經稱之爲：罪。</string>
    <string name="key2_title_sin">二、罪</string>
    <string name="key2_msg_sin">罪在人裏面，叫人不能如願以償。\n\n沒有人願意貪婪、嫉妒、兇殺；\n\n沒有人願意自誇、狂傲、欺詐；\n\n沒有人願意暴躁、邪淫、縱欲；\n\n沒有人願意怨天、尤人、咒詛。\n\n但是，人卻無法脫離這些『惡性』。</string>
    <string name="key2_verse_sin1">『我知道住在我裏面，就是我肉體之中，並沒有善，因爲立志爲善由得我，只是行出來由不得我。』</string>
    <string name="key2_verse_sin1_h1">(羅馬書七章十八節)</string>
    <string name="key2_verse_sin2">『若我去作所不願意的，就不是我行出來的，乃是住在我裏面的罪行出來的。』</string>
    <string name="key2_verse_sin2_h1">(羅馬書七章二十節)</string>
    <string name="key2_title_human_fall">三、人的墮落</string>
    <string name="key2_msg_human_fall">罪進入人裏面，叫人墮落。請看附圖：</string>
    <string name="key2_msg_sin_caused_spirit_dead">（一）罪叫人的靈死亡：</string>
    <string name="key2_verse_sin_caused_spirit_dead">『而你們原是死在過犯並罪之中。』</string>
    <string name="key2_verse_sin_caused_spirit_dead_h1">(以弗所書二章一節)</string>
    <string name="key2_msg_sin_caused_mine_to_rebel">（二）罪叫人的心思背叛：</string>
    <string name="key2_verse_sin_caused_mine_to_rebel">『你們從前是隔絕的，因著惡行心思裏與他爲敵。』</string>
    <string name="key2_verse_sin_caused_mine_to_rebel_h1">(歌羅西書一章二十一節)</string>
    <string name="key2_msg_sin_caused_body_to_sin1">（三）罪叫人的身體犯罪：</string>
    <string name="key2_verse_sin_caused_body_to_sin">『所以不要讓罪在你們必死的身體裡作王，使你們順從身體的私欲。』</string>
    <string name="key2_verse_sin_caused_body_to_sin_h1">(羅馬書六章十二節)</string>
    <string name="key2_msg_sin_caused_body_to_sin2">人墮落了，就像：一部壞了的收音機，不但不能收播音樂，並且常常發出噪音，不能控制。\n\n又像：一隻掉在泥溝裏的杯子，雖然尚有美好的外形，卻是沾滿臭泥。</string>
    <string name="key2_title_cannot_save_himself">四、人不能自救</string>
    <string name="key2_msg_cannot_save_himself">雖然人自古想盡一切方法，去脫離犯罪，然而:\n\n行善不能救人脫離罪，\n\n教育不能救人脫離罪，\n\n道德不能救人脫離罪，\n\n念經不能救人脫離罪，\n\n拜佛不能救人脫離罪，\n\n人生的寫照，就是一幅善惡兩性彼此相爭的圖畫！</string>

    <string name="key3_title_who">一、基督是誰？</string>
    <string name="key3_msg_who1">基督是神所差派到世間來解決人生問題的救主。\n\n他是三一神具體的表現。</string>
    <string name="key3_msg_who2">他又是神成爲肉體：</string>
    <string name="key3_msg_who3">故此，他是完整的神同，又是完全的人。請看附圖：</string>
    <string name="key3_msg_who4">他比好人更高！\n\n他比偉人更高！\n\n他比賢人更高！\n\n他比聖人更高！\n\n他乃是神人！</string>
    <string name="key3_verse_who1">『因爲神格一切的豐滿，都有形有體的居住在基督裏面。』</string>
    <string name="key3_verse_who1_h1">(歌羅西書二章九節)</string>
    <string name="key3_verse_who2">『話就是神。...話成了肉體，支搭帳幕在我們中間，豐豐滿滿的有恩典，有實際。』</string>
    <string name="key3_verse_who2_h1">(約翰福音一章一節，十四節)</string>

    <string name="key3_title_death_of_godman">二、神人之死</string>
    <string name="key3_msg_death_of_godman">這位神人被釘在十字架上，完成救贖的工作。他的死是以三種身份而死：</string>
    <string name="key3_msg_lamb">（一）作爲神的羔羊，他的死除去人的罪。</string>
    <string name="key3_verse_lamb">『神的羔羊，除去世人之罪的。』</string>
    <string name="key3_verse_lamb_h1">(約翰福音一章二十九節)</string>
    <string name="key3_msg_brass_serpent">（二）作爲被舉起的銅蛇，他的死毀壞古蛇――撒但，對付人裏面的蛇毒――罪性。</string>
    <string name="key3_verse_brass_serpent">『摩西在曠野怎樣舉蛇，人子也必照樣被舉起來。』</string>
    <string name="key3_verse_brass_serpent_h1">(約翰福音三章十四節)</string>
    <string name="key3_msg_grain_of_wheat">（三）作爲一粒麥子，他的死釋放神聖的生命。</string>
    <string name="key3_verse_grain_of_wheat">『一粒麥子...死了，就結出許多子粒出來。』</string>
    <string name="key3_verse_grain_of_wheat_h1">(約翰福音十二章二十四節)</string>
    <string name="key3_msg_grain_of_wheat2">現今：\n\n他的死除掉人不該有而有的罪！\n他的死賜予人該有而沒有的生命！</string>

    <string name="app_name3">GroupSheet</string>
    <!--  adMob app id 測試  -->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_app_id_test">ca-app-pub-5311420166054835~6441170794</string>
    <!-- 橫幅 測試 -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-5311420166054835/7541842932</string>
    <string name="hint_namelist_s1">請點擊畫面 左上方\n\n【功能選單】按鈕。</string>
    <string name="hint_namelist_s2">請點擊選單 第一格\n\n【名單】按鈕。</string>
    <string name="first_time_login_welcome">歡迎使用 ! \n\n請依照以下教學，\n\n製作您第一份總務表單 !</string>
    <string name="hint_AddSheet">有了常用名單，\n\n就能新增總務表單囉 !\n\n請至【功能選單】點選\n\n【新增表單】按鈕即可。</string>
    <string name="hint_to_Add_NameList">點擊\"新增\"，即可加入成員。</string>
    <string name="hint_finish_Add_NameList">完成後，點擊返回按鍵，\n回到首頁，準備新增表單 !</string>
    <string name="hint_edit_sheet">1、編輯規則:\n餐點、門票、住房，規則自由填寫。\n\n2、成員資料:\n點擊成員橫列，可編輯該成員付款情況。\n\n3、表單分析:\n各類選取人數、統計數據清楚呈現!</string>
    <string name="got_it">我知道了</string>
    <string name="tv_next">下一步</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_verse_title">聖經佳言</string>
</resources>