<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:text="@string/key2_title_human_fall" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:layout_margin="30dp"
                android:textColor="@color/black"
                android:text="@string/key2_msg_human_fall" />
            <TextView
                android:id="@+id/textView133"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:layout_margin="30dp"
                android:textColor="@color/black"
                android:text="@string/key2_msg_sin_caused_spirit_dead" />
            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/red"
                android:text="@string/key2_verse_sin_caused_spirit_dead" />
            <TextView
                android:id="@+id/textView101"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:gravity="right"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/red"
                android:text="@string/key2_verse_sin_caused_spirit_dead_h1" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:layout_margin="30dp"
                android:textColor="@color/black"
                android:text="@string/key2_msg_sin_caused_mine_to_rebel" />
            <TextView
                android:id="@+id/textView102"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/red"
                android:text="@string/key2_verse_sin_caused_mine_to_rebel" />
            <TextView
                android:id="@+id/textView103"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:gravity="right"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/red"
                android:text="@string/key2_verse_sin_caused_mine_to_rebel_h1" />
            <TextView
                android:id="@+id/textView121"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:layout_margin="30dp"
                android:textColor="@color/black"
                android:text="@string/key2_msg_sin_caused_body_to_sin1" />

            <TextView
                android:id="@+id/textView104"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/red"
                android:text="@string/key2_verse_sin_caused_body_to_sin" />
            <TextView
                android:id="@+id/textView105"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:gravity="right"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="60dp"
                android:textColor="@color/red"
                android:text="@string/key2_verse_sin_caused_body_to_sin_h1" />

            <TextView
                android:id="@+id/textView122"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/black"
                android:text="@string/key2_msg_sin_caused_body_to_sin2" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>