<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:text="@string/key4_title_meaning_of_christian" />
        <TextView
            android:id="@+id/textView111"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_margin="30dp"
            android:textColor="@color/black"
            android:text="@string/key4_msg_meaning_of_christian1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/red"
            android:text="@string/key4_verse_meaning_of_christian1" />
        <TextView
            android:id="@+id/textView101"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/red"
            android:text="@string/key4_verse_meaning_of_christian1_h1" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/three_part_human12" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_margin="30dp"
            android:textColor="@color/black"
            android:text="@string/key4_msg_meaning_of_christian2" />
        <ImageView
            android:id="@+id/img_Key4_v3_1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:src="@drawable/common_google_signin_btn_icon_dark_focused"/>
        <TextView
            android:id="@+id/textView105"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/red"
            android:text="@string/key4_verse_meaning_of_christian2" />
        <TextView
            android:id="@+id/textView106"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/red"
            android:text="@string/key4_verse_meaning_of_christian2_h1" />
        <TextView
            android:id="@+id/textView113"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_margin="30dp"
            android:textColor="@color/black"
            android:text="@string/key4_msg_meaning_of_christian3" />

    </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>