<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:text="@string/key1_title_humans_three_parts" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/red"
            android:text="@string/key1_verse_humans_three_parts" />
        <TextView
            android:id="@+id/textView101"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/red"
            android:text="@string/key1_verse_humans_three_parts_h1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_margin="30dp"
            android:textColor="@color/black"
            android:text="@string/key1_msg_humans_three_parts_1" />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/three_parts_of_human"/>
        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_margin="30dp"
            android:textColor="@color/black"
            android:text="@string/key1_msg_humans_three_parts_2" />
    </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>