<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:text="@string/key4_msg_what_must_you_do_now1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/red"
            android:text="@string/key4_msg_what_must_you_do_now2" />
        <TextView
            android:id="@+id/textView101"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:gravity="right"
            android:visibility="gone"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/red"
            android:text="@string/key1_verse_human_with_gods_shape_h1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:visibility="gone"
            android:layout_margin="30dp"
            android:textColor="@color/black"
            android:text="@string/key1_msg_human_with_gods_shape" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>